force-app/main/default/objects/Campaign/fields/MN_CampaignInfo__c.field-meta.xml
<CustomField>
    <fullName>MN_CampaignInfo__c</fullName>
    <description>MagNews unique ID: generated and managed by MagNews-MS Dynamics CRM Connector</description>
    <inlineHelpText>MagNews unique ID: generated and managed by MagNews-MS Dynamics CRM Connector</inlineHelpText>
    <label>MN_CampaignInfo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>