force-app/main/default/objects/Campaign/fields/MN_UniqueID__c.field-meta.xml
<CustomField>
    <fullName>MN_UniqueID__c</fullName>
    <description>MagNews campaign info: JSON data structure used to restore in case of app reset on the MagNews side</description>
    <inlineHelpText>MagNews campaign info: JSON data structure used to restore in case of app reset on the MagNews side</inlineHelpText>
    <label>MN_UniqueID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>