force-app/main/default/objects/Campaign/fields/MTL_o_FOV__c.field-meta.xml
<CustomField>
    <fullName>MTL_o_FOV__c</fullName>
    <formula>IF(
    CONTAINS(Name, &quot;VICIVISION&quot;),
    &quot;MTL&quot;,
    IF(
        CONTAINS(Name, &quot;Metrios&quot;),
        &quot;FOV&quot;,
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTL o FOV</label>
    <type>Text</type>
</CustomField>