force-app/main/default/objects/Campaign/fields/pi__Pardot_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>pi__Pardot_Campaign_Id__c</fullName>
    <description>The Pardot identifier for the connected campaign record</description>
    <externalId>true</externalId>
    <label>Pardot Campaign Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>