force-app/main/default/objects/Campaign/fields/pi__Pardot_Has_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>pi__Pardot_Has_Dependencies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Pardot has marketing assets using this campaign</description>
    <label>Pardot Has Dependencies</label>
    <type>Checkbox</type>
</CustomField>