force-app/main/default/objects/Campaign/listViews/Intec_2015_Leipzig.listView-meta.xml
<ListView>
    <fullName>Intec_2015_Leipzig</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>Intec 2015 - Leipzig</label>
    <language>en_US</language>
</ListView>